--- a/core-image.html
+++ b/core-image.html
@@ -16,7 +16,7 @@ letterboxed (`contain`) to fill a fixed user-size placed on the element.
 
 The `preload` option prevents the browser from rendering the image until the
 image is fully loaded.  In the interim, either the element's CSS `background-color`
-can be be used as the placeholder, or the `placeholder` property can be 
+can be be used as the placeholder, or the `placeholder` property can be
 set to a URL (preferably a data-URI, for instant rendering) for an
 placeholder image.
 
@@ -41,20 +41,20 @@ Examples:
 
   Will show light-gray background until the image loads:
 
-    <core-image style="width:400px; height:400px; background-color: lightgray;" 
+    <core-image style="width:400px; height:400px; background-color: lightgray;"
       sizing="cover" preload src="http://lorempixel.com/600/400"></core-image>
 
   Will show a base-64 encoded placeholder image until the image loads:
 
-    <core-image style="width:400px; height:400px;" placeholder="data:image/gif;base64,..." 
+    <core-image style="width:400px; height:400px;" placeholder="data:image/gif;base64,..."
       sizing="cover" preload src="http://lorempixel.com/600/400"></core-image>
 
   Will fade the light-gray background out once the image is loaded:
 
-    <core-image style="width:400px; height:400px; background-color: lightgray;" 
+    <core-image style="width:400px; height:400px; background-color: lightgray;"
       sizing="cover" preload fade src="http://lorempixel.com/600/400"></core-image>
 
-    
+
 @group Polymer Core Elements
 @element core-image
 @homepage github.io
@@ -76,7 +76,7 @@ Examples:
 <script>
 
   Polymer({
-    
+
     publish: {
 
       /**
@@ -100,8 +100,8 @@ Examples:
       load: true,
 
       /**
-       * Sets a sizing option for the image.  Valid values are `contain` (full 
-       * aspect ratio of the image is contained within the element and 
+       * Sets a sizing option for the image.  Valid values are `contain` (full
+       * aspect ratio of the image is contained within the element and
        * letterboxed) or `cover` (image is cropped in order to fully cover the
        * bounds of the element), or `null` (default: image takes natural size).
        *
@@ -123,7 +123,7 @@ Examples:
 
       /**
        * When `true`, any change to the `src` property will cause the `placeholder`
-       * image to be shown until the 
+       * image to be shown until loading has completed.
        *
        * @attribute preload
        * @type boolean
@@ -179,8 +179,7 @@ Examples:
        * @type number
        * @default null
        */
-      height: null
-
+      height: null,
     },
 
     observe: {
@@ -196,36 +195,62 @@ Examples:
     },
 
     update: function() {
-      this.style.backgroundSize = this.sizing;
-      this.style.backgroundPosition = this.sizing ? this.position : null;
-      this.style.backgroundRepeat = this.sizing ? 'no-repeat' : null;
-      if (this.preload) {
-        if (this.fade) {
-          if (!this._placeholderEl) {
-            this._placeholderEl = this.shadowRoot.querySelector('#placeholder');
-          }
-          this._placeholderEl.style.backgroundSize = this.sizing;
-          this._placeholderEl.style.backgroundPosition = this.sizing ? this.position : null;
-          this._placeholderEl.style.backgroundRepeat = this.sizing ? 'no-repeat' : null;
-          this._placeholderEl.classList.remove('fadein');
-          this._placeholderEl.style.backgroundImage = (this.load && this.placeholder) ? 'url(' + this.placeholder + ')': null;
-        } else {
-          this._setSrc(this.placeholder);
-        }
-        if (this.load && this.src) {
-          var img = new Image();
-          img.src = this.src;
-          this.loading = true;
-          img.onload = function() {
-            this._setSrc(this.src);
-            this.loading = false;
-            if (this.fade) {
-              this._placeholderEl.classList.add('fadein');
-            }
-          }.bind(this);
-        }
-      } else {
+      var styles = {
+        backgroundSize: this.sizing,
+        backgroundPosition: this.sizing ? this.position : null,
+        backgroundRepeat: this.sizing ? 'no-repeat' : null
+      };
+      this._applyStyle(this, styles); 
+
+      // If we aren't preloading, just set the source and be done with it
+      if (!this.preload) {
         this._setSrc(this.src);
+        return;
+      }
+
+      if (this.fade) {
+        this._placeholderEl = this.$.placeholder;
+        this._applyStyle(this._placeholderEl,
+          Polymer.mixin(styles, {
+            backgroundImage: (this.load && this.placeholder) ?
+                'url(' + this.placeholder + ')' : null
+          }));
+        this._placeholderEl.classList.remove('fadein');
+      } else {
+        this._setSrc(this.placeholder);
+      }
+
+      // If we're ready to load, kick it off
+      if (this.load && this.src) {
+        this._preload();
+      }
+    },
+
+    _applyStyle: function(target, styles) {
+      for (var name in styles) {
+        target.style[name] = styles[name];
+      }
+    },
+
+    _preload: function() {
+      this.loading = true;
+      var img = this._createPreloaderImg();
+      img.src = this.src;
+      img.onload = this._onLoad.bind(this, img);
+    },
+
+    /**
+     * Provides an opportunity for subclasses to customize Image creation.
+     */
+    _createPreloaderImg: function() {
+      return new Image();
+    },
+
+    _onLoad: function(img) {
+      this._setSrc(this.src);
+      this.loading = false;
+      if (this.fade) {
+        this._placeholderEl.classList.add('fadein');
       }
     },
 
