Complete dangling sentence.  Fixes #17.

--- a/core-image.html
+++ b/core-image.html
@@ -123,7 +123,8 @@ Examples:
 
       /**
        * When `true`, any change to the `src` property will cause the `placeholder`
-       * image to be shown until the 
+       * image (or background color, if no `placeholder` is specified) to be shown
+       * until the image has loaded.
        *
        * @attribute preload
        * @type boolean
