Add ARIA "img" role for temporary placeholder
Because the placeholder is intended as a img replacement while loading
is happening, it should be treated as an img by screen readers.

Fixes #12.

--- a/core-image.html
+++ b/core-image.html
@@ -69,7 +69,7 @@ Examples:
     <img id="img">
   </template>
   <template if="{{preload && fade}}">
-    <div id="placeholder" fit></div>
+    <div id="placeholder" role="img" fit></div>
   </template>
   <content></content>
 </template>
